--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "next": "13.4.19",
+    "openai": "^4.17.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "encoding": "^0.1.13",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "eslint-config-next": "13.4.19",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
