--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "next": "13.4.19",
     "openai": "^4.17.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
+    "sass": "^1.69.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
